[gd_scene load_steps=5 format=1]

[ext_resource path="res://vrc_host/vrc_host.gd" type="Script" id=1]
[ext_resource path="res://vrc_host/icon.png" type="Texture" id=2]
[ext_resource path="res://rcos/lib/canvas.tscn" type="PackedScene" id=3]
[ext_resource path="res://vrc_host/status_screen/status_screen.tscn" type="PackedScene" id=4]

[node name="vrc_host" type="Node"]

script/script = ExtResource( 1 )

[node name="icon" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -40.0
margin/top = -40.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="network_input_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[node name="connections" type="Node" parent="."]

[node name="vrc_canvas" parent="." instance=ExtResource( 3 )]

rect = Rect2( 0, 0, 200, 400 )

[node name="status_canvas" parent="." instance=ExtResource( 3 )]

rect = Rect2( 0, 0, 200, 400 )

[node name="status_screen" parent="status_canvas" instance=ExtResource( 4 )]

margin/right = 0.0


